fix word wrap style

--- a/src/assets/scss/basic.scss
+++ b/src/assets/scss/basic.scss
@@ -52,7 +52,6 @@ input:invalid {
 
 body {
   background: $color-white;
-  word-wrap: break-word;
 }
 
 
@@ -98,6 +97,10 @@ h4 {
 
 h5 {
   font-size: 18px;
+}
+
+body {
+  overflow-wrap: break-word;
 }
 
 
